{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 200,
  "lineage": "4fec1e97-c68b-dfcd-e86b-cfbee746b2d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:485032639366:instance/i-08ee18cd952e86948",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee18cd952e86948",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a32ec6f135ac799",
            "private_dns": "ip-10-0-2-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fc8270c1f6862c62",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024b569c734221cff",
            "tags": {
              "Name": "Private Instance East 1 - 1"
            },
            "tags_all": {
              "Name": "Private Instance East 1 - 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f34310f95d863049"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.private_sg_east_1",
            "aws_security_group.public_sg_east_1",
            "aws_subnet.us_east_1_private",
            "aws_vpc.us_east_1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:485032639366:instance/i-0437d62d0a08cffaa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0437d62d0a08cffaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f789b4de79156af3",
            "private_dns": "ip-10-0-2-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b9b2b5674f89d29",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024b569c734221cff",
            "tags": {
              "Name": "Private Instance East 1 - 2"
            },
            "tags_all": {
              "Name": "Private Instance East 1 - 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f34310f95d863049"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.private_sg_east_1",
            "aws_security_group.public_sg_east_1",
            "aws_subnet.us_east_1_private",
            "aws_vpc.us_east_1_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:485032639366:instance/i-0c7f29897d86917fa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7f29897d86917fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca1b0ae6a5af6004",
            "private_dns": "ip-10-0-2-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2c827ea424d9f25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024b569c734221cff",
            "tags": {
              "Name": "Private Instance East 1 - 3"
            },
            "tags_all": {
              "Name": "Private Instance East 1 - 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f34310f95d863049"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.private_sg_east_1",
            "aws_security_group.public_sg_east_1",
            "aws_subnet.us_east_1_private",
            "aws_vpc.us_east_1_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:485032639366:instance/i-04fa4c512c37ee7ee",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fa4c512c37ee7ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05988cec61d6260e9",
            "private_dns": "ip-10-0-2-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ce4fe73e2b1507a2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024b569c734221cff",
            "tags": {
              "Name": "Private Instance East 1 - 4"
            },
            "tags_all": {
              "Name": "Private Instance East 1 - 4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f34310f95d863049"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.private_sg_east_1",
            "aws_security_group.public_sg_east_1",
            "aws_subnet.us_east_1_private",
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:485032639366:instance/i-03fdb4e338e2aea2c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fdb4e338e2aea2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d744de703f7c28b6",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-54-89-167-42.compute-1.amazonaws.com",
            "public_ip": "54.89.167.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b9606ecf67ed62d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb40166abb1f599d",
            "tags": {
              "Name": "Public Instance East 1"
            },
            "tags_all": {
              "Name": "Public Instance East 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056b4406ede176737"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.public_sg_east_1",
            "aws_subnet.us_east_1_public",
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aafdae616ee7c9b7",
            "arn": "arn:aws:ec2:us-west-1:485032639366:instance/i-0b5ca3ba959434840",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5ca3ba959434840",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fcf16023485f824",
            "private_dns": "ip-10-1-1-174.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.174",
            "public_dns": "ec2-54-67-84-67.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.84.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d960573a70fbc539",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1f53457db775340",
            "tags": {
              "Name": "Public Instance West 1"
            },
            "tags_all": {
              "Name": "Public Instance West 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c08ddb1d60091003"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair_west",
            "aws_security_group.public_sg_west_1",
            "aws_subnet.us_east_1_private",
            "aws_subnet.us_east_1_public",
            "aws_subnet.us_west_1_public",
            "aws_vpc.us_east_1_vpc",
            "aws_vpc.us_west_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us_east_1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:internet-gateway/igw-061f6fe53749f8fce",
            "id": "igw-061f6fe53749f8fce",
            "owner_id": "485032639366",
            "vpc_id": "vpc-0898ae84b026fa73b"
          },
          "dependencies": [
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us_west_1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:485032639366:internet-gateway/igw-0905e3c6c6c1ddd8d",
            "id": "igw-0905e3c6c6c1ddd8d",
            "owner_id": "485032639366",
            "vpc_id": "vpc-0a9631f38f9a30268"
          },
          "dependencies": [
            "aws_vpc.us_west_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us_east_1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:route-table/rtb-0c63f87c204f6c704",
            "id": "rtb-0c63f87c204f6c704",
            "owner_id": "485032639366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061f6fe53749f8fce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-East-1"
            },
            "tags_all": {
              "Name": "Public-RT-East-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898ae84b026fa73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.us_east_1_igw",
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us_west_1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:485032639366:route-table/rtb-0ab0705790e548681",
            "id": "rtb-0ab0705790e548681",
            "owner_id": "485032639366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0905e3c6c6c1ddd8d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-West-1"
            },
            "tags_all": {
              "Name": "Public-RT-West-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9631f38f9a30268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.us_west_1_igw",
            "aws_vpc.us_west_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us_east_1_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03763b5e248b26612",
            "route_table_id": "rtb-0c63f87c204f6c704",
            "subnet_id": "subnet-0eb40166abb1f599d"
          },
          "dependencies": [
            "aws_internet_gateway.us_east_1_igw",
            "aws_route_table.us_east_1_public_rt",
            "aws_subnet.us_east_1_public",
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us_west_1_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b93bb4b5f607d859",
            "route_table_id": "rtb-0ab0705790e548681",
            "subnet_id": "subnet-0e1f53457db775340"
          },
          "dependencies": [
            "aws_internet_gateway.us_west_1_igw",
            "aws_route_table.us_west_1_public_rt",
            "aws_subnet.us_west_1_public",
            "aws_vpc.us_west_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:security-group/sg-0f34310f95d863049",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f34310f95d863049",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-056b4406ede176737"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240517092051262500000003",
            "name_prefix": "terraform-",
            "owner_id": "485032639366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG-East-1"
            },
            "tags_all": {
              "Name": "Private-SG-East-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898ae84b026fa73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg_east_1",
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:security-group/sg-056b4406ede176737",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056b4406ede176737",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240517092043011400000001",
            "name_prefix": "terraform-",
            "owner_id": "485032639366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-SG-East-1"
            },
            "tags_all": {
              "Name": "Public-SG-East-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898ae84b026fa73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:485032639366:security-group/sg-0c08ddb1d60091003",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c08ddb1d60091003",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240517092101498200000002",
            "name_prefix": "terraform-",
            "owner_id": "485032639366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-SG-West-1"
            },
            "tags_all": {
              "Name": "Public-SG-West-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9631f38f9a30268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.us_east_1_private",
            "aws_subnet.us_east_1_public",
            "aws_vpc.us_west_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:subnet/subnet-024b569c734221cff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024b569c734221cff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485032639366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-private"
            },
            "tags_all": {
              "Name": "us-east-1-private"
            },
            "vpc_id": "vpc-0898ae84b026fa73b"
          },
          "dependencies": [
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:subnet/subnet-0eb40166abb1f599d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb40166abb1f599d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485032639366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-public"
            },
            "tags_all": {
              "Name": "us-east-1-public"
            },
            "vpc_id": "vpc-0898ae84b026fa73b"
          },
          "dependencies": [
            "aws_vpc.us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_west_1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:485032639366:subnet/subnet-0e1f53457db775340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1f53457db775340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485032639366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-public"
            },
            "tags_all": {
              "Name": "us-west-1-public"
            },
            "vpc_id": "vpc-0a9631f38f9a30268"
          },
          "dependencies": [
            "aws_vpc.us_west_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us_east_1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485032639366:vpc/vpc-0898ae84b026fa73b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0405fede13306f314",
            "default_route_table_id": "rtb-0df60f57122977a9e",
            "default_security_group_id": "sg-036bd14761e012b0e",
            "dhcp_options_id": "dopt-0ff5ac96e11214775",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0898ae84b026fa73b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df60f57122977a9e",
            "owner_id": "485032639366",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us_west_1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:485032639366:vpc/vpc-0a9631f38f9a30268",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0229592c0214b1ee4",
            "default_route_table_id": "rtb-038b0939c07b232fe",
            "default_security_group_id": "sg-0321aff6c1f490911",
            "dhcp_options_id": "dopt-06430e68808978be0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9631f38f9a30268",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038b0939c07b232fe",
            "owner_id": "485032639366",
            "tags": {
              "Name": "us-west-1-vpc"
            },
            "tags_all": {
              "Name": "us-west-1-vpc"
            }
          }
        }
      ]
    }
  ]
}